--- a/2.html
+++ b/2.html
@@ -116,8 +116,8 @@
             + "\n\n\n\n小提示：\n\n想要输出35.6度，则输入·35.·6度"
 
         document.querySelector("#output_power").placeholder = "这里输出“权要”，点击复制权要可以一键复制。";
-        document.querySelector("#output_you").placeholder = "1、这里输出“优选的”，点击复制权要可以一键复制。\n\n2、自动去除括号和数字，并添加优选的。";
-        document.querySelector("#output_shi").placeholder = "1、这里输出“实施例”，点击复制权要可以一键复制。\n\n2、自动去除括号，并添加在本实施例中。";
+        document.querySelector("#output_you").placeholder = "1、这里输出“优选的”，点击复制权要可以一键复制。\n\n2、自动去除括号和数字，并添加在一种可选方案中：所述。";
+        document.querySelector("#output_shi").placeholder = "1、这里输出“实施例”，点击复制权要可以一键复制。\n\n2、自动去除括号，并添加在一个实施例中，如图1所示，所述。";
 
 
         //1、函数，获取附图标记
